--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "three": "^0.179.1",
