--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "scss": "^0.2.4",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.92.0",
     "vite": "^7.1.2"
   }
 }
