--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "scss": "^0.2.4",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
     "three": "^0.179.1",
     "three-stdlib": "^2.36.0"
