--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.26.2",
     "gsap": "^3.13.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "scss": "^0.2.4",
