--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.26.2",
     "gsap": "^3.13.0",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.5.3",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "scss": "^0.2.4",
     "styled-components": "^6.1.19",
